force-app/main/default/objects/Product__c/fields/Hold_Payments__c.field-meta.xml
<CustomField>
    <fullName>Hold_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not this account should have it&apos;s automatic payment processing be suspended</description>
    <inlineHelpText>Indicates whether or not this account should have it&apos;s automatic payment processing be suspended</inlineHelpText>
    <label>Hold Payments</label>
    <type>Checkbox</type>
</CustomField>