force-app/main/default/objects/Product__c/fields/Insolvency_Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Discharge_Date__c</fullName>
    <description>DebtNext-specific</description>
    <inlineHelpText>DebtNext-specific</inlineHelpText>
    <label>Insolvency Discharge Date</label>
    <type>Date</type>
</CustomField>