force-app/main/default/objects/Product__c/fields/Insolvency_Status__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Status__c</fullName>
    <label>Insolvency Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>