force-app/main/default/objects/Product__c/fields/Insolvency_Type__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Type__c</fullName>
    <description>DebtNext-specific</description>
    <inlineHelpText>DebtNext-specific</inlineHelpText>
    <label>Insolvency Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>