force-app/main/default/objects/Product__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>The interest rate charged on this account</description>
    <inlineHelpText>The interest rate charged on this account</inlineHelpText>
    <label>Interest Rate</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>