force-app/main/default/objects/Product__c/fields/Interest_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Code__c</fullName>
    <description>The pricing strategy code (interest rate code) applied to this credit card</description>
    <inlineHelpText>The pricing strategy code (interest rate code) applied to this credit card</inlineHelpText>
    <label>Pricing Strategy Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>