force-app/main/default/objects/Product__c/fields/Internal_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Status__c</fullName>
    <description>FDR:  The Internal Status code of this account
Megasys: The InternalStatus of the loan account</description>
    <inlineHelpText>FDR:  The Internal Status code of this account
Megasys: The InternalStatus of the loan account</inlineHelpText>
    <label>Internal Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>