force-app/main/default/objects/Product__c/fields/Internal_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Internal_Status_Description__c</fullName>
    <description>For FDR, a description of this Internal Status Code value</description>
    <formula>CASE( Internal_Status__c , 
&apos;D&apos;, &apos;Delinquent&apos;, 
&apos;O&apos;, &apos;Over Limit&apos;, 
&apos;N&apos;, &apos;Credit Balance&apos;, 
&apos;X&apos;, &apos;Delinquent and Over Limit&apos;,
 &apos;Normal or credit balance&apos;)</formula>
    <inlineHelpText>For FDR, a description of this Internal Status Code value</inlineHelpText>
    <label>Internal Status Description</label>
    <type>Text</type>
</CustomField>