force-app/main/default/objects/Product__c/fields/Last_Delinquency_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Delinquency_Date__c</fullName>
    <description>The date this account last entered delinquency, if available</description>
    <inlineHelpText>The date this account last entered delinquency, if available</inlineHelpText>
    <label>Last Delinquency Date</label>
    <type>Date</type>
</CustomField>