force-app/main/default/objects/Product__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>The primary account holder&apos;s last name</description>
    <inlineHelpText>The primary account holder&apos;s last name</inlineHelpText>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>