force-app/main/default/objects/Product__c/fields/Last_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Amount__c</fullName>
    <description>The amount of the most recent previous payment made on this account</description>
    <inlineHelpText>The amount of the most recent previous payment made on this account</inlineHelpText>
    <label>Last Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>