force-app/main/default/objects/Product__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <description>The date that the most recent previous payment was made on this account</description>
    <inlineHelpText>The date that the most recent previous payment was made on this account</inlineHelpText>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>