force-app/main/default/objects/Product__c/fields/Last_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Status__c</fullName>
    <label>Last Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>