force-app/main/default/objects/Product__c/fields/Last_State_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_State_Changed_Date__c</fullName>
    <description>The last time EFT Funding information was updated on this account, if applicable</description>
    <inlineHelpText>The last time EFT Funding information was updated on this account, if applicable</inlineHelpText>
    <label>Last State Changed Date</label>
    <type>DateTime</type>
</CustomField>