force-app/main/default/objects/Product__c/fields/Last_Statement_Balance__c.field-meta.xml
<CustomField>
    <fullName>Last_Statement_Balance__c</fullName>
    <description>The balance as shown on the account&apos;s most recent statement issued</description>
    <inlineHelpText>The balance as shown on the account&apos;s most recent statement issued</inlineHelpText>
    <label>Last Statement Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>