force-app/main/default/objects/Product__c/fields/Last_Statement_Credit_Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Statement_Credit_Interest_Amount__c</fullName>
    <description>The interest amount as shown on the account&apos;s most recent statement issued</description>
    <inlineHelpText>The interest amount as shown on the account&apos;s most recent statement issued</inlineHelpText>
    <label>Last Statement Credit Interest Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>