force-app/main/default/objects/Product__c/fields/Last_Statement_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Statement_Date__c</fullName>
    <description>The date the most recent statement was issued on this account</description>
    <inlineHelpText>The date the most recent statement was issued on this account</inlineHelpText>
    <label>Last Statement Date</label>
    <type>Date</type>
</CustomField>