force-app/main/default/objects/Product__c/fields/Late_Fee_Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_Amount_Outstanding__c</fullName>
    <description>The total amount of late-payment fees outstanding on this account</description>
    <inlineHelpText>The total amount of late-payment fees outstanding on this account</inlineHelpText>
    <label>Late Fee Amount Outstanding</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>