force-app/main/default/objects/Product__c/fields/Latest_NSFED_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_NSFED_Date__c</fullName>
    <description>The most recent date this account had an NSF occur, based on VersaPay automated payments only</description>
    <inlineHelpText>The most recent date this account had an NSF occur, based on VersaPay automated payments only</inlineHelpText>
    <label>Latest NSF Date</label>
    <type>DateTime</type>
</CustomField>