force-app/main/default/objects/Product__c/fields/Lifetime_Average_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Average_Daily_Balance__c</fullName>
    <description>The average daily balance of this account, for the entire life of the account</description>
    <inlineHelpText>The average daily balance of this account, for the entire life of the account</inlineHelpText>
    <label>Lifetime Average Daily Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>