force-app/main/default/objects/Product__c/fields/Loan_Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Process_Type__c</fullName>
    <description>Determines EFT Processing based on the selected loan type (Traditional, RBO, Rewrite, etc)</description>
    <inlineHelpText>Determines EFT Processing based on the selected loan type (Traditional, RBO, Rewrite, etc)</inlineHelpText>
    <label>Loan Process Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>Re-write</fullName>
            </value>
            <value>
                <fullName>RBO</fullName>
            </value>
            <value>
                <fullName>Consolidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>