force-app/main/default/objects/Product__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <description>The type of credit product this account represents</description>
    <inlineHelpText>The type of credit product this account represents</inlineHelpText>
    <label>Credit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affirm Financial MasterCard</fullName>
            </value>
            <value>
                <fullName>Affirm Financial Term Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>