force-app/main/default/objects/Product__c/fields/Lost_Stolen_Date__c.field-meta.xml
<CustomField>
    <fullName>Lost_Stolen_Date__c</fullName>
    <description>The date that the credit card was lost or stolen, if applicable</description>
    <inlineHelpText>The date that the credit card was lost or stolen, if applicable</inlineHelpText>
    <label>Lost/Stolen Date</label>
    <type>Date</type>
</CustomField>