force-app/main/default/objects/Product__c/fields/Minimum_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Payment_Amount__c</fullName>
    <description>The minimum monthly payment amount due, if applicable</description>
    <inlineHelpText>The minimum monthly payment amount due, if applicable</inlineHelpText>
    <label>Minimum Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>