force-app/main/default/objects/Product__c/fields/Monthly_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fee_Amount__c</fullName>
    <description>The annual fee charged on this account to the primary cardholder, if applicable; Note that this may be charged monthly (i.e. this amount / 12)</description>
    <inlineHelpText>The annual fee charged on this account to the primary cardholder, if applicable; Note that this may be charged monthly (i.e. this amount / 12)</inlineHelpText>
    <label>Annual Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>