force-app/main/default/objects/Product__c/fields/Mother_Maiden_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_Maiden_Name__c</fullName>
    <description>Security question for the primary account holder</description>
    <inlineHelpText>Security question for the primary account holder</inlineHelpText>
    <label>Mother Maiden Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>