force-app/main/default/objects/Product__c/fields/Next_Due_Days__c.field-meta.xml
<CustomField>
    <fullName>Next_Due_Days__c</fullName>
    <description>The number of days until the next payment is due</description>
    <inlineHelpText>The number of days until the next payment is due</inlineHelpText>
    <label>Next Payment Days Due</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>