force-app/main/default/objects/Product__c/fields/NSF_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>NSF_Fee_Amount__c</fullName>
    <description>The amount of an NSF fee, if charged</description>
    <inlineHelpText>The amount of an NSF fee, if charged</inlineHelpText>
    <label>NSF Fee Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>