force-app/main/default/objects/Product__c/fields/NSF_Fee_Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>NSF_Fee_Amount_Outstanding__c</fullName>
    <description>The total amount of NSF fees still unpaid, is applicable</description>
    <inlineHelpText>The total amount of NSF fees still unpaid, is applicable</inlineHelpText>
    <label>NSF Fee Amount Outstanding</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>