force-app/main/default/objects/Product__c/fields/Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Date__c</fullName>
    <description>The date this account was opened</description>
    <inlineHelpText>The date this account was opened</inlineHelpText>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>