force-app/main/default/objects/Product__c/fields/Original_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Credit_Amount__c</fullName>
    <description>The original amount this account was opened for</description>
    <inlineHelpText>The original amount this account was opened for</inlineHelpText>
    <label>Original Credit Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>