force-app/main/default/objects/Product__c/fields/Originating_Creditor__c.field-meta.xml
<CustomField>
    <fullName>Originating_Creditor__c</fullName>
    <description>DebtNext-specific</description>
    <inlineHelpText>DebtNext-specific</inlineHelpText>
    <label>Originating Creditor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>