force-app/main/default/objects/Product__c/fields/Other_Fee_Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Other_Fee_Amount_Outstanding__c</fullName>
    <description>The total amount of Other Fees outstanding on this account, if applicable</description>
    <inlineHelpText>The total amount of Other Fees outstanding on this account, if applicable</inlineHelpText>
    <label>Other Fee Amount Outstanding</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>