force-app/main/default/objects/Product__c/fields/Override_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Override_Payment_Amount__c</fullName>
    <description>An override of the next payment amount for automatic processing</description>
    <inlineHelpText>An override of the next payment amount for automatic processing</inlineHelpText>
    <label>Override Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>