force-app/main/default/objects/Product__c/fields/Override_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_Payment_Date__c</fullName>
    <description>An override of the next payment date for automatic processing</description>
    <inlineHelpText>An override of the next payment date for automatic processing</inlineHelpText>
    <label>Override Payment Date</label>
    <type>Date</type>
</CustomField>