force-app/main/default/objects/Product__c/fields/PAP_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>PAP_Account_Number__c</fullName>
    <description>The current Pre-Authorized Payment Account Number</description>
    <inlineHelpText>The current Pre-Authorized Payment Account Number</inlineHelpText>
    <label>PAP Account Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>