force-app/main/default/objects/Product__c/fields/PAP_Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>PAP_Bank_Code__c</fullName>
    <description>The current Pre-Authorized Payment Bank Code</description>
    <inlineHelpText>The current Pre-Authorized Payment Bank Code</inlineHelpText>
    <label>PAP Bank Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>