force-app/main/default/objects/Product__c/fields/PAP_Information_Accepted__c.field-meta.xml
<CustomField>
    <fullName>PAP_Information_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the customer agreed to the PAP terms and conditions</description>
    <inlineHelpText>Whether the customer agreed to the PAP terms and conditions</inlineHelpText>
    <label>PAP Information Accepted</label>
    <type>Checkbox</type>
</CustomField>