force-app/main/default/objects/Product__c/fields/PAP_Information_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>PAP_Information_Accepted_Date__c</fullName>
    <description>The date on which the customer agreed to the PAP terms and conditions, if applicable</description>
    <inlineHelpText>The date on which the customer agreed to the PAP terms and conditions, if applicable</inlineHelpText>
    <label>PAP Information Accepted Date</label>
    <type>DateTime</type>
</CustomField>