force-app/main/default/objects/Product__c/fields/PAP_Transit_Code__c.field-meta.xml
<CustomField>
    <fullName>PAP_Transit_Code__c</fullName>
    <description>The current Pre-Authorized Payment Transit/Branch Code</description>
    <inlineHelpText>The current Pre-Authorized Payment Transit/Branch Code</inlineHelpText>
    <label>PAP Transit Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>