force-app/main/default/objects/Product__c/fields/Past_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Amount__c</fullName>
    <description>The total amount that is current past due by the customer</description>
    <inlineHelpText>The total amount that is current past due by the customer</inlineHelpText>
    <label>Past Due Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>