force-app/main/default/objects/Product__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <description>The next payment amount due</description>
    <inlineHelpText>The next payment amount due</inlineHelpText>
    <label>Next Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>