force-app/main/default/objects/Product__c/fields/Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Date__c</fullName>
    <description>The date that the next payment is due</description>
    <inlineHelpText>The date that the next payment is due</inlineHelpText>
    <label>Next Payment Date</label>
    <type>Date</type>
</CustomField>