force-app/main/default/objects/Product__c/fields/Payment_Released_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Released_Date__c</fullName>
    <description>The date that account funds were delivered to the customer</description>
    <inlineHelpText>The date that account funds were delivered to the customer</inlineHelpText>
    <label>Payment Released Date</label>
    <type>Date</type>
</CustomField>