force-app/main/default/objects/Product__c/fields/Payment_Setup_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Setup_Status__c</fullName>
    <description>Indicates whether the account is currently having payments deducted from the customer automatically, manually, or N/A</description>
    <inlineHelpText>Indicates whether the account is currently having payments deducted from the customer automatically, manually, or N/A</inlineHelpText>
    <label>Payment Setup Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automated</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>