force-app/main/default/objects/Product__c/fields/Phone_Home__c.field-meta.xml
<CustomField>
    <fullName>Phone_Home__c</fullName>
    <description>The primary account holder&apos;s home phone number</description>
    <inlineHelpText>The primary account holder&apos;s home phone number</inlineHelpText>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>