force-app/main/default/objects/Product__c/fields/Phone_Other__c.field-meta.xml
<CustomField>
    <fullName>Phone_Other__c</fullName>
    <description>Customer Phone Other</description>
    <inlineHelpText>Customer Phone Other</inlineHelpText>
    <label>Cell Phone</label>
    <type>Phone</type>
</CustomField>