force-app/main/default/objects/Product__c/fields/Phone_Work__c.field-meta.xml
<CustomField>
    <fullName>Phone_Work__c</fullName>
    <description>Customer Phone Work</description>
    <inlineHelpText>Customer Phone Work</inlineHelpText>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>