force-app/main/default/objects/Product__c/fields/Previous_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Previous_Payment_Amount__c</fullName>
    <label>Previous Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>