force-app/main/default/objects/Product__c/fields/Previous_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Payment_Date__c</fullName>
    <label>Previous Payment Date</label>
    <type>Date</type>
</CustomField>