force-app/main/default/objects/Product__c/fields/PRIN_Number__c.field-meta.xml
<CustomField>
    <fullName>PRIN_Number__c</fullName>
    <description>The credit card PRIN number on this account</description>
    <inlineHelpText>The credit card PRIN number on this account</inlineHelpText>
    <label>PRIN Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>