force-app/main/default/objects/Product__c/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <description>The status of this product (Active, closed, charged-off, etc)</description>
    <inlineHelpText>The status of this product (Active, closed, charged-off, etc)</inlineHelpText>
    <label>Product Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>