force-app/main/default/objects/Product__c/fields/Product_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Product_Subtype__c</fullName>
    <description>Tier level of this product, if applicable (i.e. &quot;Platinum&quot;, &quot;Gold&quot;, etc)</description>
    <inlineHelpText>Tier level of this product, if applicable (i.e. &quot;Platinum&quot;, &quot;Gold&quot;, etc)</inlineHelpText>
    <label>Product Tier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>