force-app/main/default/objects/Product__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>The specific product this record represents</description>
    <inlineHelpText>The specific product this record represents</inlineHelpText>
    <label>Product Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>