force-app/main/default/objects/Product__c/fields/PTP1_Amount__c.field-meta.xml
<CustomField>
    <fullName>PTP1_Amount__c</fullName>
    <description>Latest PTP Information -Promised Amount</description>
    <inlineHelpText>Latest PTP Information -Promised Amount</inlineHelpText>
    <label>PTP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>