force-app/main/default/objects/Product__c/fields/PTP1_Date__c.field-meta.xml
<CustomField>
    <fullName>PTP1_Date__c</fullName>
    <description>Latest PTP Information - Promise Date</description>
    <inlineHelpText>Latest PTP Information - Promise Date</inlineHelpText>
    <label>PTP Date</label>
    <type>Date</type>
</CustomField>