force-app/main/default/objects/Product__c/fields/PTP1_mate__c.field-meta.xml
<CustomField>
    <fullName>PTP1_mate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Latest PTP Information - Promise Met?</description>
    <inlineHelpText>Latest PTP Information - Promise Met?</inlineHelpText>
    <label>PTP Met</label>
    <type>Checkbox</type>
</CustomField>