force-app/main/default/objects/Product__c/fields/PTP1_Method__c.field-meta.xml
<CustomField>
    <fullName>PTP1_Method__c</fullName>
    <description>Latest PTP Information - Payment Method</description>
    <inlineHelpText>Latest PTP Information - Payment Method</inlineHelpText>
    <label>PTP Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>online</fullName>
            </value>
            <value>
                <fullName>branch</fullName>
            </value>
            <value>
                <fullName>cheque</fullName>
            </value>
            <value>
                <fullName>western union</fullName>
            </value>
            <value>
                <fullName>telepay</fullName>
            </value>
            <value>
                <fullName>PAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>