force-app/main/default/objects/Product__c/fields/Record_Last_Updated_In_Staging__c.field-meta.xml
<CustomField>
    <fullName>Record_Last_Updated_In_Staging__c</fullName>
    <description>The date this record was last updated from the System of Record</description>
    <inlineHelpText>The date this record was last updated from the System of Record</inlineHelpText>
    <label>ETL Last Update</label>
    <type>DateTime</type>
</CustomField>