force-app/main/default/objects/Product__c/fields/Regular_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Regular_Payment_Amount__c</fullName>
    <description>The regular payment amount for this account, if applicable</description>
    <inlineHelpText>The regular payment amount for this account, if applicable</inlineHelpText>
    <label>Regular Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>