force-app/main/default/objects/Product__c/fields/Report_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Report_Product_Count__c</fullName>
    <description>To support the &quot;Daily Performance Summary Report&quot;, this field felicitates the summary of accounts in Product object.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>