force-app/main/default/objects/Product__c/fields/Requested_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Close_Date__c</fullName>
    <description>The close date on this account as requested by the customer</description>
    <inlineHelpText>The close date on this account as requested by the customer</inlineHelpText>
    <label>Requested Close Date</label>
    <type>Date</type>
</CustomField>