force-app/main/default/objects/Product__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>The System of Record this account is found in (FDR, DebtNext, etc)</description>
    <inlineHelpText>The System of Record this account is found in (FDR, DebtNext, etc)</inlineHelpText>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DebtNext</fullName>
            </value>
            <value>
                <fullName>FDR</fullName>
            </value>
            <value>
                <fullName>Megasys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>