force-app/main/default/objects/Product__c/fields/SP_First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>SP_First_Payment_Date__c</fullName>
    <description>Scheduled Payment Date - First Payment Date</description>
    <formula>First_Payment_Date__c - 1</formula>
    <inlineHelpText>Scheduled Payment Date - First Payment Date</inlineHelpText>
    <label>SP First Payment Date</label>
    <type>Date</type>
</CustomField>