force-app/main/default/objects/Product__c/fields/SP_Next_Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>SP_Next_Payment_Due_Date__c</fullName>
    <description>Scheduled Payment Date - Next Payment Date</description>
    <formula>Payment_Due_Date__c - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Scheduled Payment Date - Next Payment Date</inlineHelpText>
    <label>SP Next Payment Date</label>
    <type>Date</type>
</CustomField>