force-app/main/default/objects/Product__c/fields/SP_Override_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>SP_Override_Payment_Date__c</fullName>
    <description>Scheduled Payment Date - Override Payment Date</description>
    <formula>Override_Payment_Date__c - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Scheduled Payment Date - Override Payment Date</inlineHelpText>
    <label>SP Override Payment Date</label>
    <type>Date</type>
</CustomField>