force-app/main/default/objects/Product__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>The primary account holder&apos;s address province</description>
    <inlineHelpText>The primary account holder&apos;s address province</inlineHelpText>
    <label>Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>