force-app/main/default/objects/Product__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>For Owner Review</fullName>
            </value>
            <value>
                <fullName>PoC Details Provided</fullName>
            </value>
            <value>
                <fullName>Pre-Filing Review</fullName>
            </value>
            <value>
                <fullName>Owner Inquiry</fullName>
            </value>
            <value>
                <fullName>Owner Inquiry Received</fullName>
            </value>
            <value>
                <fullName>PoC Package Generated</fullName>
            </value>
            <value>
                <fullName>Filing Complete – No Further Action</fullName>
            </value>
            <value>
                <fullName>Discharged</fullName>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>