force-app/main/default/objects/Product__c/fields/Statute_Status__c.field-meta.xml
<CustomField>
    <fullName>Statute_Status__c</fullName>
    <description>DebtNext-specific</description>
    <inlineHelpText>DebtNext-specific</inlineHelpText>
    <label>Statute Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>