force-app/main/default/objects/Product__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>The initial contract term of the loan</description>
    <inlineHelpText>The initial contract term of the loan</inlineHelpText>
    <label>Contractual Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>